--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,10 @@
 {
-  "readableLineLength": true
+  "readableLineLength": true,
+  "pdfExportSettings": {
+    "includeName": false,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
